--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "RP",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.1",
